fixed sunbeam overflow

--- a/web/makeathon-2/styles/About.module.css
+++ b/web/makeathon-2/styles/About.module.css
@@ -15,6 +15,7 @@
   );
 
   height: 120vh;
+  overflow-x: hidden;
 }
 
 .custom_shape_divider_top_1694365385 {
